@@ -4,6 +4,7 @@
 * browser=firefox uses legacy driver (works for <=47), browser=marionette - gecko driver (any Firefox)
 * Added experimental support of Edge (browser=edge, set webdriver.edge.driver to path to MicrosoftWebDriver.exe)
 * #433 bypass spawning local browser
+* #391 add method $.selectOptionContainingText()
 
 === 4.1 (Released 01.12.2016)
 * #428 Improve byAttribute method for search via css selectors
